Closed
Bug 548088
Opened 16 years ago
Closed 15 years ago
Messages marked as Junk not moved to Junk folder
Categories
(Thunderbird :: Account Manager, defect)
Tracking
(Not tracked)
RESOLVED
FIXED
Thunderbird 5.0b1
People
(Reporter: cpuidle, Assigned: rkent)
Details
(Whiteboard: [support][duptome])
Attachments
(1 file)
|
2.14 KB,
patch
|
Bienvenu
:
review+
|
Details | Diff | Splinter Review |
User-Agent: Mozilla/5.0 (Windows; U; Windows NT 6.1; de; rv:1.9.1.7) Gecko/20091221 Firefox/3.5.7
Build Identifier: Mozilla/5.0 (Windows; U; Windows NT 6.1; en-US; rv:1.9.1.8) Gecko/20100216 Thunderbird/3.0.2
When installing TB 3.0.1 on a new machine, I've easily setup 2 gmail and 1 gmx account, all of which were automatically configured as imap accounts.
My problem now is, that marking messages as junk does not move them to the junk folder. Also manually executing the junk controls does not perform the action.
Reproducible: Always
Steps to Reproduce:
1. goto inbox
2. mark "junk" column
Actual Results:
Junk column shows the junk sign, but message remains in inbox instead of moving to junk folder.
Expected Results:
Message should move to junk folder for the respective account.
Same behaviour with upgraded 3.0.2 version. No problem on separate machine (WinXP) where accounts are setup as normal pop accounts.
Comment 1•16 years ago
|
||
Check Tools -> Account Settings -> {account-name} -> Junk Settings -- check the box labeled Move new junk messages to:, and set a junk folder there, if you haven't already.
Hope this helps!
Status: UNCONFIRMED → RESOLVED
Closed: 16 years ago
Component: General → Account Manager
QA Contact: general → account-manager
Resolution: --- → INVALID
Whiteboard: [support]
| Reporter | ||
Comment 2•16 years ago
|
||
Sorry for not mentioning this. Setting is enabled (checked) for all accounts. I've also verified that "junk on local folders" vs "junk on individual account" as destination does not make a difference.
| Reporter | ||
Updated•16 years ago
|
Status: RESOLVED → UNCONFIRMED
Resolution: INVALID → ---
Comment 3•16 years ago
|
||
WFM here.
Does it work in -safe-mode ?
Anything in the error console when you are marking an email as spam ?
Comment 4•16 years ago
|
||
First, read next MozillaZine Knowledge Base documents which can easily be reached by search for "Junk Filter" at kb.mozillazine.org, please.
> http://kb.mozillazine.org/Junk_Mail_Controls
> http://kb.mozillazine.org/Junk_messages_not_moved
And check your Junk filter related settings again.
Andreas Goetz(bug opener):
Did you set correctly? Did you setup appropriately to work around known issues?
Do you use other than "Display Language:English(US)" at Gmail's setting?
Do you use non en-US version of Tb?
Do you use Gmail IMAP?
If all are yes, please be careful for real folder name/displayed folder name.
(Trash example)
Real folder name Displayed folder name
Trash(in English-US) Trash by en-US Tb
Trash(in English-US) (a) Localized Trash by localized Tb
(b) Localized Trash by Gmail (c) Localized Trash by Gmail == (b)
If (a) == (b), user(you), and Tb also, easily confuse.
| Assignee | ||
Comment 5•15 years ago
|
||
I'm pretty sure that the spamActionTargetAccount, which is needed for the manual junk move to work, is only being set when the automatic move is setup, as mentioned in comment 1. That is a bug itself which could be easily fixed.
I am assigning this to myself as a reminder, the fix is to set that to the server URI when calling GetSpamSettings if it is null. (Note to self: apply the same fix as ExQuilla bug 788).
Assignee: nobody → kent
| Assignee | ||
Comment 6•15 years ago
|
||
Attachment #528482 -
Flags: review?(dbienvenu)
| Assignee | ||
Updated•15 years ago
|
Status: UNCONFIRMED → ASSIGNED
Ever confirmed: true
| Assignee | ||
Updated•15 years ago
|
Whiteboard: [support] → [support][has patch for review]
Updated•15 years ago
|
Attachment #528482 -
Flags: review?(dbienvenu) → review+
| Assignee | ||
Comment 7•15 years ago
|
||
Comment on attachment 528482 [details] [diff] [review]
Fix
Checked in http://hg.mozilla.org/comm-central/rev/1fca5293e44d
| Assignee | ||
Updated•15 years ago
|
Status: ASSIGNED → RESOLVED
Closed: 16 years ago → 15 years ago
Flags: in-testsuite+
Resolution: --- → FIXED
Whiteboard: [support][has patch for review] → [support]
Target Milestone: --- → Thunderbird 3.3a4
Updated•15 years ago
|
Whiteboard: [support] → [support][duptome]
Updated•15 years ago
|
Blocks: TB2SM
Whiteboard: [support][duptome] → [tb2sm: to SM 2.1] [support][duptome]
Version: unspecified → Trunk
Comment 8•15 years ago
|
||
Sorry for the bugspam. Serge is suffering from brain fade again.
No longer blocks: TB2SM
Whiteboard: [tb2sm: to SM 2.1] [support][duptome] → [support][duptome]
Updated•15 years ago
|
Whiteboard: [support][duptome] → [support][duptome]
Comment 9•15 years ago
|
||
| Reporter | ||
Comment 10•15 years ago
|
||
Which test release would I need to download to get the fix? I've just migrated to a new PC and the problem is back :(
Comment 11•15 years ago
|
||
3.3 when it comes out ( or the beat in a week or two)
| Reporter | ||
Comment 12•13 years ago
|
||
I would like to add- as I've recently seen this problem on a friend's TB v17 install, that in additional to the account's junk settings, the general Tools->Options->Security->Junk->"When I mark messages as junk" box needs to be checked as well.
You need to log in
before you can comment on or make changes to this bug.
Description
•