Bug 548088 - Messages marked as Junk not moved to Junk folder, r=bienvenu